--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,8 @@ CTestTestfile.cmake
 _deps
 CMakeUserPresets.json
 reference/
+logs/
+CLAUDE.md
 
 # CLion
 #  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
